--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 ANIWATCH_API_PORT=4000
 
 # env to control allowed origins
-ANIWATCH_API_CORS_ALLOWED_ORIGINS=https://localhost:5173,https://anipulse.vercel.app
+ANIWATCH_API_CORS_ALLOWED_ORIGINS=https://localhost:5173,https://anipulse.pages.dev
 
 # RATE LIMIT
 # duration to track requests (in milliseconds) for rate limiting. here, 30*60*1000 = 1800000 = 30 minutes
@@ -19,7 +19,7 @@ ANIWATCH_API_MAX_REQS=70
 
 
 # NOTE: this env is "required" for vercel deployments
-ANIWATCH_API_VERCEL_DEPLOYMENT=true
+# ANIWATCH_API_VERCEL_DEPLOYMENT=true
 
 # env to use optional redis caching functionality
 #ANIWATCH_API_REDIS_CONN_URL=<rediss://default:your-secure-password@your-redis-instance-name.provider.com:6379>
